# gnome-extension-ofono

./: .gitignore  README.md  configure.ac
po/: fi.po  messages.pot
src/: Makefile.am  applet.js  extension.js  interface.js  logger.js  metadata.json.in
